...
  const bookCaterpillar = uuid();
  const bookBrownBear = uuid();

  const books = [
    {
      id: bookCharlotte,
      title: "Charlotte's Web",
      author: "E.B. White",
      pages: 184,
      level: "Grade 2-4",
      genre: "Fiction",
    },
    {
...
